[workspace]

members = [
    "day1a",
    "day1b",
    "day2a",
    "day2b",
    "day3a",
    "day3b",
    "day4a",
    "day4b",
    "day5a",
    "day5b",
    "day6a",
    "day6b",
    "day7a",
    "day7b",
    "day8a",
    "day8b",
    "day9",
    "day10",
    "day11a",
    "day11b",
    "day12a",
    "day12b",
    "day13a",
    "day13b",
]
